[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/tutorial.gd" type="Script" id=1]
[ext_resource path="res://cenas/menu.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]

resource/name = "inicioJogo"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn_nao:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("btn_voltar:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("btn_sim:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("btn_sim:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 180, 750 ), Vector2( 440, 810 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "inicioTutorial"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("btn_nao:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("btn_voltar:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("btn_sim:transform/scale")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("btn_sim:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 440, 810 ), Vector2( 180, 750 ) ]
}

[node name="TUTORIAL" type="Node"]

script/script = ExtResource( 1 )

[node name="game" parent="." instance=ExtResource( 2 )]

script/script = null

[node name="texto" parent="game"]

rect/scale = Vector2( 1.8, 1.61904 )
margin/left = 40.0
margin/top = 110.0
margin/right = 400.0
margin/bottom = 410.0
text = ""

[node name="Timer" parent="game"]

autostart = false

[node name="AnimationPlayer" parent="game"]

anims/inicioJogo = SubResource( 1 )
anims/inicioTutorial = SubResource( 2 )

[connection signal="timeout" from="game/Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="game/btn_nao" to="." method="naoVetTutorial"]

[connection signal="pressed" from="game/btn_sim" to="." method="_on_btn_sim_pressed"]

[connection signal="pressed" from="game/btn_sim" to="." method="verTutorial"]


[editable path="game"]
